# fast-clean-api

./: .env.test  .pre-commit-config.yaml  README.md  makefile
src/: CLAUDE.md  README.md  alembic.ini  logging.ini  pyproject.toml
src/.claude/commands/: e2e-test.md  unit-test.md
src/adapters/connection_engines/in_memory_db/: in_memory_abstract_repository.py
src/adapters/connection_engines/sql_alchemy/: SqlAlchemyAbstractRepository.py  base.py  models.py  session.py
src/adapters/repositories/: README.md
src/adapters/repositories/task_repositories/: in_memory_task_repository.py  sql_alchemy_task_repository.py
src/domain/: README.md
src/domain/entities/: base.py  task.py
src/domain/exceptions/: common.py  task_exception.py
src/domain/value_objects/: create_task_data.py  list_entity.py  ordering.py
src/drivers/: README.md  main.py
src/drivers/api/: main_router.py
src/drivers/config/: settings.py
src/drivers/database_migrations/: README.md  env.py
src/drivers/database_migrations/versions/: cfca03967ac5_new_tables.py
src/drivers/dependencies/: database.py  hateoas.py  repositories.py  use_cases.py
src/drivers/exceptions_handlers/: handlers.py
src/drivers/helpers/: hetoas.py
src/ports/: README.md  task_repository_interface.py
src/tests/: conftest.py  utilis.py
src/tests/e2e/: conftest.py
src/tests/e2e/tasks/: test_complete_task.py  test_create_task.py  test_list_all_tasks.py
src/tests/unit_tests/: conftest.py
src/use_cases/: README.md
src/use_cases/tasks/: complete_task_usecase.py  create_task_usecase.py  get_all_tasks_usecase.py
(+10 files in other folders)
